--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/새 폴더.loader.js";
+      var loaderUrl = buildUrl + "/how999092.github.io.loader.js";
       var config = {
-        dataUrl: buildUrl + "/새 폴더.data",
-        frameworkUrl: buildUrl + "/새 폴더.framework.js",
-        codeUrl: buildUrl + "/새 폴더.wasm",
+        dataUrl: buildUrl + "/how999092.github.io.data",
+        frameworkUrl: buildUrl + "/how999092.github.io.framework.js",
+        codeUrl: buildUrl + "/how999092.github.io.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "BBC",
