--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unity WebGL Player | BBC</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
+<div>Teachable Machine Pose Model</div>
+<div id="label-container"></div>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
@@ -23,7 +26,63 @@
         <div id="unity-build-title">BBC</div>
       </div>
     </div>
-    <script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
+<script>
+	var url = "./my_model/";
+    	let model, webcam, ctx, labelContainer, maxPredictions;
+
+	async function init() {
+        		const modelURL = url + "model.json";
+        		const metadataURL = url + "metadata.json";
+
+        		model = await tmPose.load(modelURL, metadataURL);
+        		maxPredictions = model.getTotalClasses();
+
+       		 const size = 200;
+        		const flip = true; // whether to flip the webcam
+        		webcam = new tmPose.Webcam(size, size, flip);
+        		await webcam.setup(); // request access to the webcam
+        		await webcam.play();
+        		window.requestAnimationFrame(loop);
+
+        		const canvas = document.getElementById("unity-canvas");
+        		canvas.width = size; canvas.height = size;
+        		ctx = canvas.getContext("2d");
+        		labelContainer = document.getElementById("label-container");
+        		for (let i = 0; i < maxPredictions; i++) { // and class labels
+            		labelContainer.appendChild(document.createElement("div"));
+        		}
+    	}
+	async function loop(timestamp) {
+        		webcam.update(); // update the webcam frame
+        		await predict();
+        		window.requestAnimationFrame(loop);
+    	}
+	async function predict() {
+        		const { pose, posenetOutput } = await model.estimatePose(webcam.canvas);
+        		const prediction = await model.predict(posenetOutput);
+
+        		for (let i = 0; i < maxPredictions; i++) {
+            		const classPrediction =
+                			prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+            		labelContainer.childNodes[i].innerHTML = classPrediction;
+        		}
+
+        		drawPose(pose);
+   	}
+	function drawPose(pose) {
+        		if (webcam.canvas) {
+            			ctx.drawImage(webcam.canvas, 0, 0);
+            			if (pose) {
+                				const minPartConfidence = 0.5;
+                				tmPose.drawKeypoints(pose.keypoints, minPartConfidence, ctx);
+                				tmPose.drawSkeleton(pose.keypoints, minPartConfidence, ctx);
+            			}
+        		}
+    	}
+	init()
+
 
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
