--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-us">
 <head>
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
 <div id="label-container"></div>
     <div id="unity-container" class="unity-desktop">
       <div><canvas id="canvas"></canvas></div>
-      <canvas id="unity-canvas" width=1020 height=574 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
