--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unity WebGL Player | BBC</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-</head>
+  </head>
   <body>
-<div>Teachable Machine Pose Model</div>
-<div id="label-container"></div>
     <div id="unity-container" class="unity-desktop">
-      <div><canvas id="canvas"></canvas></div>
       <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
@@ -27,9 +23,8 @@
         <div id="unity-build-title">BBC</div>
       </div>
     </div>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
-<script>
+    <script>
+
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
@@ -37,6 +32,12 @@
       var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
 
+      // Shows a temporary message banner/ribbon for a few seconds, or
+      // a permanent error message on top of the canvas if type=='error'.
+      // If type=='warning', a yellow highlight color is used.
+      // Modify or remove this function to customize the visually presented
+      // way that non-critical warnings and error messages are presented to the
+      // user.
       function unityShowBanner(msg, type) {
         function updateBannerVisibility() {
           warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
@@ -68,7 +69,15 @@
         showBanner: unityShowBanner,
       };
 
+      // By default Unity keeps WebGL canvas render target size matched with
+      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
+      // Set this to false if you want to decouple this synchronization from
+      // happening inside the engine, and you would instead like to size up
+      // the canvas DOM size and WebGL render target sizes yourself.
+      // config.matchWebGLToCanvasSize = false;
+
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        // Mobile device style: fill the whole browser client area with the game canvas:
 
         var meta = document.createElement('meta');
         meta.name = 'viewport';
@@ -77,8 +86,13 @@
         container.className = "unity-mobile";
         canvas.className = "unity-mobile";
 
+        // To lower canvas resolution on mobile devices to gain some
+        // performance, uncomment the following line:
+        // config.devicePixelRatio = 1;
+
 
       } else {
+        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
         canvas.style.width = "960px";
         canvas.style.height = "600px";
@@ -101,62 +115,8 @@
               });
             };
 
-    document.body.appendChild(script);
+      document.body.appendChild(script);
 
-
-      var url = "./my_model/";
-      let model, webcam, ctx, labelContainer, maxPredictions;
-
-	  async function init() {
-        		const modelURL = url + "model.json";
-        		const metadataURL = url + "metadata.json";
-
-        		model = await tmPose.load(modelURL, metadataURL);
-        		maxPredictions = model.getTotalClasses();
-
-       		    const size = 200;
-        		const flip = true;
-        		webcam = new tmPose.Webcam(size, size, flip);
-        		await webcam.setup(); 
-        		await webcam.play();
-        		window.requestAnimationFrame(loop);
-
-        		const canvas = document.getElementById("canvas");
-        		canvas.width = size; canvas.height = size;
-        		ctx = canvas.getContext("2d");
-        		labelContainer = document.getElementById("label-container");
-        		for (let i = 0; i < maxPredictions; i++) {
-            		labelContainer.appendChild(document.createElement("div"));
-        		}
-      }
-	  async function loop(timestamp) {
-        		webcam.update();
-        		await predict();
-        		window.requestAnimationFrame(loop);
-      }
-	  async function predict() {
-        		const { pose, posenetOutput } = await model.estimatePose(webcam.canvas);
-        		const prediction = await model.predict(posenetOutput);
-
-        		for (let i = 0; i < maxPredictions; i++) {
-            		const classPrediction =
-                			prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-            		labelContainer.childNodes[i].innerHTML = classPrediction;
-        		}
-
-        		drawPose(pose);
-   	  }
-	  function drawPose(pose) {
-        		if (webcam.canvas) {
-            			ctx.drawImage(webcam.canvas, 0, 0);
-            			if (pose) {
-                				const minPartConfidence = 0.5;
-                				tmPose.drawKeypoints(pose.keypoints, minPartConfidence, ctx);
-                				tmPose.drawSkeleton(pose.keypoints, minPartConfidence, ctx);
-            			}
-        		}
-      }
-	  init()
     </script>
   </body>
 </html>
