--- a/index.html
+++ b/index.html
@@ -8,56 +8,64 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
 </head>
-  <body>
-<div>Teachable Machine Pose Model</div>
-<div id="label-container"></div>
+<body>
+    <div>Teachable Machine Pose Model</div>
+    <div id="label-container"></div>
     <div id="unity-container" class="unity-desktop">
-      <div><canvas id="canvas"></canvas></div>
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
+        <div><canvas id="canvas"></canvas></div>
+        <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+        <div id="unity-loading-bar">
+            <div id="unity-logo"></div>
+            <div id="unity-progress-bar-empty">
+                <div id="unity-progress-bar-full"></div>
+            </div>
         </div>
-      </div>
-      <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">BBC</div>
-      </div>
+        <div id="unity-warning"> </div>
+        <div id="unity-footer">
+            <div id="unity-webgl-logo"></div>
+            <div id="unity-fullscreen-button"></div>
+            <div id="unity-build-title">BBC</div>
+        </div>
     </div>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
-<script>
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
+    <script>
+        var container = document.querySelector("#unity-container");
+        var canvas = document.querySelector("#unity-canvas");
+        var loadingBar = document.querySelector("#unity-loading-bar");
+        var progressBarFull = document.querySelector("#unity-progress-bar-full");
+        var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+        var warningBanner = document.querySelector("#unity-warning");
 
-      function unityShowBanner(msg, type) {
+        CallCSharpFunction()
+        function CallCSharpFunction() {
+        console.log("function on")
+        // C# 함수 호출
+
+        console.log("function off")
+        }
+
+        function unityShowBanner(msg, type) {
         function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+        warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
         }
         var div = document.createElement('div');
         div.innerHTML = msg;
         warningBanner.appendChild(div);
         if (type == 'error') div.style = 'background: red; padding: 10px;';
         else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
+        if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+        setTimeout(function() {
+        warningBanner.removeChild(div);
+        updateBannerVisibility();
+        }, 5000);
         }
         updateBannerVisibility();
-      }
+        }
 
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/how999092.github.io.loader.js";
-      var config = {
+        var buildUrl = "Build";
+        var loaderUrl = buildUrl + "/how999092.github.io.loader.js";
+        var config = {
         dataUrl: buildUrl + "/how999092.github.io.data",
         frameworkUrl: buildUrl + "/how999092.github.io.framework.js",
         codeUrl: buildUrl + "/how999092.github.io.wasm",
@@ -66,112 +74,105 @@
         productName: "BBC",
         productVersion: "1.0",
         showBanner: unityShowBanner,
-      };
+        };
 
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-
+        if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         var meta = document.createElement('meta');
         meta.name = 'viewport';
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
         container.className = "unity-mobile";
         canvas.className = "unity-mobile";
-
-
-      } else {
-
+        } else {
         canvas.style.width = "960px";
         canvas.style.height = "600px";
-      }
+        }
 
-      loadingBar.style.display = "block";
+        loadingBar.style.display = "block";
 
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
+        var script = document.createElement("script");
+        script.src = loaderUrl;
+        script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-              }).then((unityInstance) => {
-                loadingBar.style.display = "none";
-                fullscreenButton.onclick = () => {
-                  unityInstance.SetFullscreen(1);
-                };
-              }).catch((message) => {
-                alert(message);
-              });
-            };
-
-    document.body.appendChild(script);
-
-
-      var url = "./my_model/";
-      let model, webcam, ctx, labelContainer, maxPredictions;
-
-	  async function init() {
-        		const modelURL = url + "model.json";
-        		const metadataURL = url + "metadata.json";
-
-        		model = await tmPose.load(modelURL, metadataURL);
-        		maxPredictions = model.getTotalClasses();
-
-       		    const size = 200;
-        		const flip = true;
-        		webcam = new tmPose.Webcam(size, size, flip);
-        		await webcam.setup(); 
-        		await webcam.play();
-        		window.requestAnimationFrame(loop);
-
-        		const canvas = document.getElementById("canvas");
-        		canvas.width = size; canvas.height = size;
-        		ctx = canvas.getContext("2d");
-        		labelContainer = document.getElementById("label-container");
-        		for (let i = 0; i < maxPredictions; i++) {
-            		labelContainer.appendChild(document.createElement("div"));
-        		}
-      }
-	  async function loop(timestamp) {
-        		webcam.update();
-        		await predict();
-        		window.requestAnimationFrame(loop);
-      }
-	  async function predict() {
-        		const { pose, posenetOutput } = await model.estimatePose(webcam.canvas);
-        		const prediction = await model.predict(posenetOutput);
-
-        		for (let i = 0; i < maxPredictions; i++) {
-            		const classPrediction =
-                			prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-            		labelContainer.childNodes[i].innerHTML = classPrediction;
-        		    transKey(prediction);
-                }
-
-        		drawPose(pose);
-   	  }
-	  function drawPose(pose) {
-        		if (webcam.canvas) {
-            			ctx.drawImage(webcam.canvas, 0, 0);
-            			if (pose) {
-                				const minPartConfidence = 0.5;
-                				tmPose.drawKeypoints(pose.keypoints, minPartConfidence, ctx);
-                				tmPose.drawSkeleton(pose.keypoints, minPartConfidence, ctx);
-            			}
-        		}
-      }
-      function transKey(prediction){
-                if (prediction[2].probability.toFixed(2)>prediction[1].probability.toFixed(2)){
-                        console.log("True");
-                        simulateKeyPress(' ');
-                }
-      }
-      function simulateKeyPress(key) {
-        var event = new KeyboardEvent('keydown', {
-          key: key,
-          bubbles: true,
-          cancelable: true
+        progressBarFull.style.width = 100 * progress + "%";
+        }).then((instance) => {
+        unityInstance = instance;
+        loadingBar.style.display = "none";
+        fullscreenButton.onclick = () => {
+        unityInstance.SetFullscreen(1);
+        };
+        init();
+        }).catch((message) => {
+        alert(message);
         });
-        document.dispatchEvent(event);
-      }
-	  init()
+        };
+
+        document.body.appendChild(script);
+
+        var url = "./my_model/";
+        let model, webcam, ctx, labelContainer, maxPredictions;
+
+        async function init() {
+        const modelURL = url + "model.json";
+        const metadataURL = url + "metadata.json";
+
+        model = await tmPose.load(modelURL, metadataURL);
+        maxPredictions = model.getTotalClasses();
+
+        const size = 200;
+        const flip = true;
+        webcam = new tmPose.Webcam(size, size, flip);
+        await webcam.setup();
+        await webcam.play();
+        window.requestAnimationFrame(loop);
+
+        const canvas = document.getElementById("canvas");
+        canvas.width = size;
+        canvas.height = size;
+        ctx = canvas.getContext("2d");
+        labelContainer = document.getElementById("label-container");
+        for (let i = 0; i < maxPredictions; i++) {
+        labelContainer.appendChild(document.createElement("div"));
+        }
+        }
+
+        async function loop(timestamp) {
+        webcam.update();
+        await predict();
+        window.requestAnimationFrame(loop);
+        }
+
+        async function predict() {
+        const { pose, posenetOutput } = await model.estimatePose(webcam.canvas);
+        const prediction = await model.predict(posenetOutput);
+
+        for (let i = 0; i < maxPredictions; i++) {
+        const classPrediction = prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+        labelContainer.childNodes[i].innerHTML = classPrediction;
+        transKey(prediction);
+        }
+
+        drawPose(pose);
+        }
+
+        function drawPose(pose) {
+        if (webcam.canvas) {
+        ctx.drawImage(webcam.canvas, 0, 0);
+        if (pose) {
+        const minPartConfidence = 0.5;
+        tmPose.drawKeypoints(pose.keypoints, minPartConfidence, ctx);
+        tmPose.drawSkeleton(pose.keypoints, minPartConfidence, ctx);
+        }
+        }
+        }
+
+        function transKey(prediction) {
+        if (prediction[2].probability.toFixed(2) > prediction[1].probability.toFixed(2) + 0.5) {
+        console.log("com");
+        }
+        }
+
+        init();
     </script>
-  </body>
+</body>
 </html>
